zz-out/pass14_run2/zz-scripts/chapter02/plot_fig01_P_vs_T_evolution.err
  File "/home/jplal/MCGT/zz-scripts/chapter02/plot_fig01_P_vs_T_evolution.py", line 63
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
